Refactored code validator and update UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
       <div class="main-content">
         <div class="document-header">
-          <h1 class="document-title">Grammar Validator</h1>
+          <h1 class="document-title">Grammar Validator Simple Past</h1>
           <span class="badge">English</span>
         </div>
 
